--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.3",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
