--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "battleship",
   "version": "0.1.0",
+  "homepage": "https://ryan1431.github.io/battleship",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "^2.7.1"
