--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "name": "Battleship",
   "icons": [
     {
-      "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "48x48",
+      "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "battleship",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
